# rust-clock

./: .gitignore  Cargo.toml  PLAN.md  README.md  build.rs
.github/: TCTBP Agent.md  TCTBP Cheatsheet.md  TCTBP.json  TCTBP_STATE.json  copilot-instructions.md
.github/agents/: TCTBP.agent.md
.github/hooks/: tctbp-safety.json
.github/prompts/: Install TCTBP Agent Infrastructure Into Another Repository.prompt.md
assets/: rust-clock.desktop
docs/: README.md  clock-face-visibility-plan.md  code-risk-review-2026-04-13.md  platform-boundary-design.md  platform-port-plan.md  user-guide.md  windows-cross-platform.md  windows-installer.md
installer/windows/: build-installer.ps1  rust-clock.iss
scripts/: install-linux-user-local.sh  run-dev-harness.sh  tctbp-pretool-hook.js
src/: alarm_panel.rs  app_icon.rs  clock_face.rs  config.rs  context_menu.rs  hover_panel.rs  main.rs  theme.rs  tray.rs
src/alarm/: manager.rs  mod.rs  sound.rs
src/clock_face/: drawing.rs  mod.rs  overlay.rs
src/platform/: fallback.rs  linux.rs  mod.rs  windows.rs
