[package]
name = "rust-clock"
version = "0.5.4"
edition = "2021"
description = "A classic analog clock desktop widget (desklet) for Linux"
license = "MIT"
readme = "README.md"

[dependencies]
iced = { version = "0.14", features = ["canvas", "tokio"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "6"
rodio = "0.20"
uuid = { version = "1", features = ["v4", "serde"] }

[profile.release]
opt-level = 3
lto = true
strip = true
