[package]
name = "rust-clock"
version = "0.8.4"
edition = "2021"
description = "Analog clock desklet for Linux with alarms, timers, and tray controls"
license = "MIT"
readme = "README.md"

[dependencies]
iced = { version = "0.14", features = ["canvas", "tokio"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "6"
rodio = "0.20"
uuid = { version = "1", features = ["v4", "serde"] }

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = "0.13"
ksni = { version = "0.3", features = ["blocking"] }

[target.'cfg(target_os = "windows")'.dependencies]
winrt-notification = "0.5.1"
tray-icon = "0.21.3"
windows-sys = { version = "0.61.2", features = ["Win32_System_Threading", "Win32_UI_WindowsAndMessaging"] }

[profile.release]
opt-level = 3
lto = true
strip = true
